--- a/Recipe/Guidance/Guidance.html
+++ b/Recipe/Guidance/Guidance.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active" aria-current="page" href="#home" style="color: white;" href="#About me">About me</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" style="color: white;" href="">Recipe List/Guidance</a>
+                          <a class="nav-link active" aria-current="page" style="color: white;" href="../Product page/product.html">Recipe List</a>
                         </li>
                     </ul>
                   </div>
