--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Guidanc">
     <title>Aryan's Cookie Mart</title>
 </head>
 
@@ -35,7 +36,7 @@
                         <a class="nav-link active" aria-current="page" href="#home" style="color: white;" href="#About me">About me</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" style="color: white;" href="">Recipe List/Guidance</a>
+                          <a class="nav-link active" aria-current="page" style="color: white;" href="../../Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
                         </li>
                     </ul>
                   </div>
