Landing Page almost done

--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -73,236 +73,11 @@
 <div class="description">
 <div class="row">
 <div class="col-lg-2"></div>
-<div class="col-lg-8"><p><strong>Guidance on how to make this cookie</strong></p></div>
+<div class="col-lg-8"><p><strong>Need Guidance on how to make this graceful,magnificent cookie? Check Navbar mate</strong></p></div>
 <div class="col-lg-2"></div>
 </div> 
 </div>
 
-
-<div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step one</div>
-        <div class="card-body">
-          <p>Beat the butter and sugar until the colour changes to a very pale yellow and it is light and fluffy. </p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Picture 1</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/2mixbutteraddegg.jpg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-2 "></div>
-  </div>
-  <hr>
-  <div class="row stepMargin">
-    <div class="col-sm-2 "></div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 2</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/3addsugar.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step two</div>
-        <div class="card-body">
-          <p>Add the 250g of sugar together with the eggs.</p>
-          <p>Beat the dough once more until mixed well</p>
-        </div>
-      </div>
-  </div>
-
-  <hr>
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step three</div>
-        <div class="card-body">
-          <p>Grate the zest of the lemon.</p>
-          <p>add the lemon zest to the dough and mix well.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 3</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/4addlemonzest.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-2 "></div>
-  </div>
-  </div>
-  <hr>
-        <!-- ?? -->
-
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 4</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/5addflour.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step four</div>
-        <div class="card-body">
-          <p>Sift the flour through a sieve and mix the dough thoroughly.</p>
-        </div>
-      </div>
-  </div>
-  </div>
-
-  <!-- ?? -->
-
-  <hr>
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step five</div>
-        <div class="card-body">
-          <p>Once viscous enough, knead the dough by hand</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 5</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/6mix.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-2 "></div>
-  </div>
-  <hr>
-
-  
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 6</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/7coverandcool.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step six</div>
-        <div class="card-body">
-          <p>cover the dough with cling film and set it outside (if it's cold enough) or in the fridge for about 1 hour.</p>
-        </div>
-      </div>
-  </div>
-  </div>
-
-  <hr>
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step seven</div>
-        <div class="card-body">
-          <p>Once the dough has hardened from the cold, roll the dough out at about 1cm thickness. </p>
-          <p>tip: use two object of 1cm height to roll out the dough</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 7</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/8auswahlen.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-2 "></div>
-  </div>
-  <hr>
-
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 8</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/9yellowegg.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step one</div>
-        <div class="card-body">
-          <p>Crack the last egg and separate the yolk from the eggwhite.</p>
-          <p>Evenly spread the yolk over the Mailänderli to give it a shine.</p>
-        </div>
-      </div>
-  </div>
-  </div>
-
-  <hr>
-  <div class="row stepMargin">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step one</div>
-        <div class="card-body">
-          <p>Let the unbaked but gauged in Mailänderli cool outside or in a fridge for about 10min.</p>
-          <p>After the amount of time has reached, put the Mailänderli in the pre-heated oven for 15 minutes.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 ">
-      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 9</div>
-        <div class="card-body">
-          <img src="../images/imagesforbaking/10kühlen.jpeg" alt="picture of food" />
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-2 "></div>
-  </div>
-  <hr>
-
-  
-
-</div>
-
-
-
-<!-- finished product -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-4">
-      <h1 class="finished">Finished Product!</h1>
-      <p>let it cool for one hour and enjoy!</p>
-    </div>
-    <div class="col-sm-6">
-      <img src="../images/imagesforbaking/11doneyttaaa.jpeg" alt="" class="finishedpic" >
-    </div>
-    <div class="col-sm-2"></div>
-  </div>
-</div>
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
