--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -79,7 +79,7 @@
 </div>
 
 
-<!--Slideshow-->
+<!--Slideshowl--> 
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
