--- a/Recipe/Guidance/Guidance.html
+++ b/Recipe/Guidance/Guidance.html
@@ -36,7 +36,7 @@
                         <a class="nav-link active" aria-current="page" href="#home" style="color: white;" href="#About me">About me</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" style="color: white;" href="../../HTML/CSS_Files/index.html">Landing Page</a>
+                          <a class="nav-link active" aria-current="page" style="color: white;" href="../../HTML/CSS_Files/index.html">Home Page</a>
                         </li>
                     </ul>
                   </div>
