--- a/Recipe/Guidance/Guidance.html
+++ b/Recipe/Guidance/Guidance.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="">
     <title>Aryan's Cookie Mart</title>
 </head>
 
@@ -85,16 +86,16 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step one</div>
         <div class="card-body">
-          <p>Beat the butter and sugar until the colour changes to a very pale yellow and it is light and fluffy. </p>
+          <p> Add the Butter in a bowl </p>
         </div>
       </div>
     </div>
     
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Picture 1</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/2mixbutteraddegg.jpg" alt="picture of food" />
+          <img src="../../Bilder/Step1.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -106,9 +107,9 @@
     <div class="col-sm-2 "></div>
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 2</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/3addsugar.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step2.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -117,8 +118,8 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step two</div>
         <div class="card-body">
-          <p>Add the 250g of sugar together with the eggs.</p>
-          <p>Beat the dough once more until mixed well</p>
+          <p>Add the sugar to the Butter</p>
+          <p>Start mixing the butter and the sugar together</p>
         </div>
       </div>
   </div>
@@ -130,16 +131,16 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step three</div>
         <div class="card-body">
-          <p>Grate the zest of the lemon.</p>
-          <p>add the lemon zest to the dough and mix well.</p>
+          <p>After the sugar and butter have been mixed together and its in multiple "crumble",</p>
+          <p>add the eggs.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 3</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/4addlemonzest.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step3.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -147,15 +148,15 @@
   </div>
   </div>
   <hr>
-        <!-- ?? -->
+        
 
   <div class="row stepMargin">
     <div class="col-sm-2"></div>
     <div class="col-sm-4">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 4</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/5addflour.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step4.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -163,13 +164,12 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step four</div>
         <div class="card-body">
-          <p>Sift the flour through a sieve and mix the dough thoroughly.</p>
+          <p>While the dough is mixing, prepare the flour and add baking soda to the flour.</p>
         </div>
       </div>
   </div>
   </div>
 
-  <!-- ?? -->
 
   <hr>
   <div class="row stepMargin">
@@ -178,15 +178,15 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step five</div>
         <div class="card-body">
-          <p>Once viscous enough, knead the dough by hand</p>
+          <p>Now that the our eggs and crumbled dough have mixed together, we are gonna add the flour/baking Soda and Vanilla extract together</p>
         </div>
       </div>
     </div>
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 5</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/6mix.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step5.jpg" style="max-height: 20em"alt="picture of food" />
         </div>
       </div>
     </div>
@@ -199,9 +199,9 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-4">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 6</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/7coverandcool.jpeg" alt="picture of food" />
+          <img src="../../Bilder/result_ofsteps1-5.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -209,7 +209,7 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step six</div>
         <div class="card-body">
-          <p>cover the dough with cling film and set it outside (if it's cold enough) or in the fridge for about 1 hour.</p>
+          <p>After all the steps, this is how it should look like! If your dough looks like this, then well done, we have completed the hardest part of this journey and we are on the right path</p>
         </div>
       </div>
   </div>
@@ -222,16 +222,15 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Step seven</div>
         <div class="card-body">
-          <p>Once the dough has hardened from the cold, roll the dough out at about 1cm thickness. </p>
-          <p>tip: use two object of 1cm height to roll out the dough</p>
+          <p>Now that we have our dough, we have to take dark chocolate, and slice it small pieces, so we get chocolate "chips"! </p>
         </div>
       </div>
     </div>
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 7</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/8auswahlen.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step6.jpg" style="max-height: 20em"alt="picture of food" />
         </div>
       </div>
     </div>
