Guidance page almost done

--- a/Recipe/Guidance/Guidance.html
+++ b/Recipe/Guidance/Guidance.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="https://lh3.googleusercontent.com/proxy/DXQ9l00G3V83ZqWwOI2aVgUySV5vUaoeNThgEoqbb6Wj1Vv3i53DnnkQX8v-bmKj4izUjJi0fvSaBNcAvBHj9dyYbFhuqWI" alt="" width="45" height="40">
+                    <img src="../../HTML/CSS_Files/Navbar_Picture.jpg" alt="" width="45" height="40">
                   </a>
                   <button
                     class="navbar-toggler"
@@ -242,18 +242,17 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-4">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 8</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/9yellowegg.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step7.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step one</div>
+        <div class="card-header">Step eight</div>
         <div class="card-body">
-          <p>Crack the last egg and separate the yolk from the eggwhite.</p>
-          <p>Evenly spread the yolk over the Mailänderli to give it a shine.</p>
+          <p>Now add the "chocolate chips" to the dough.</p>
         </div>
       </div>
   </div>
@@ -264,18 +263,17 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
-        <div class="card-header">Step one</div>
+        <div class="card-header">Step nine</div>
         <div class="card-body">
-          <p>Let the unbaked but gauged in Mailänderli cool outside or in a fridge for about 10min.</p>
-          <p>After the amount of time has reached, put the Mailänderli in the pre-heated oven for 15 minutes.</p>
+          <p>Now take a spoon full of dough in your hands, make it flat and ad Nutella in the center point. And make it to a circle </p>
         </div>
       </div>
     </div>
     <div class="col-sm-4 ">
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
-        <div class="card-header">Picture 9</div>
+        <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../images/imagesforbaking/10kühlen.jpeg" alt="picture of food" />
+          <img src="../../Bilder/step8.jpg" style="max-height: 20em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -283,25 +281,75 @@
   </div>
   <hr>
 
-  
-
-</div>
-
-
-
-<!-- finished product -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-4">
-      <h1 class="finished">Finished Product!</h1>
-      <p>let it cool for one hour and enjoy!</p>
-    </div>
-    <div class="col-sm-6">
-      <img src="../images/imagesforbaking/11doneyttaaa.jpeg" alt="" class="finishedpic" >
-    </div>
+  <div class="row stepMargin">
     <div class="col-sm-2"></div>
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
+        <div class="card-header">Picture </div>
+        <div class="card-body">
+          <img src="../../Bilder/step9.jpg" style="max-height: 20em" alt="picture of food" />
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
+        <div class="card-header">Step ten</div>
+        <div class="card-body">
+          <p>This is how it should look like.</p>
+        </div>
+      </div>
   </div>
+  </div>
+
+  <hr>
+  <div class="row stepMargin">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4 ">
+      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
+        <div class="card-header">Step eleven</div>
+        <div class="card-body">
+          <p>Put the tray(where you have layed the cookies on) in the Oven, and let it stay there for 14 minutes for 180 degrees in hot air plus!</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 ">
+      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
+        <div class="card-header">Picture </div>
+        <div class="card-body">
+          <img src="../../Bilder/step10.jpg" style="max-height: 10em" alt="picture of food" />
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-2 "></div>
+  </div>
+  <hr>
+
+  <div class="row stepMargin">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3" style="max-width: 100em">
+        <div class="card-header">Picture </div>
+        <div class="card-body">
+          <img src="../../Bilder/step11.jpg" style="max-height: 20em" alt="picture of food" />
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
+        <div class="card-header">Step twelve</div>
+        <div class="card-body">
+          <p>After its done with the oven, take it out and enjoy lads!.</p>
+        </div>
+      </div>
+  </div>
+  </div>
+
+
 </div>
+
+
+
+<!--PDF BUTTON-->
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
