--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="https://lh3.googleusercontent.com/proxy/DXQ9l00G3V83ZqWwOI2aVgUySV5vUaoeNThgEoqbb6Wj1Vv3i53DnnkQX8v-bmKj4izUjJi0fvSaBNcAvBHj9dyYbFhuqWI" alt="" width="45" height="40">
+                    <img src="Navbar_Picture.jpg" alt="" width="45" height="40">
                   </a>
                   <button
                     class="navbar-toggler"
@@ -33,7 +33,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home" style="color: white;" href="#About me">About me</a>
+                        <a class="nav-link active" aria-current="page" href="#home" style="color: white;" href="#../../">About me</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link active" aria-current="page" style="color: white;" href="../../Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
