--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -33,8 +33,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home" style="color: white;" href="#../../">About me</a>
-                      </li>
+                        <a class="nav-link active" aria-current="page" style="color: white;" href="../../About_me/aboutme.html">About me</a>
                       <li class="nav-item">
                           <a class="nav-link active" aria-current="page" style="color: white;" href="../../Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
                         </li>
