--- a/Recipe/Guidance/Guidance.html
+++ b/Recipe/Guidance/Guidance.html
@@ -47,7 +47,7 @@
                     </div>
            
               </nav>
-               <!--Navbar ends here-->
+               <!--Navbar ends here:-->
 
 <p>hello World</p>
 <div class="foodblog">
