--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="Navbar_Picture.jpg" alt="" width="45" height="40">
+                    <img src="" alt="" width="45" height="40">
                   </a>
                   <button
                     class="navbar-toggler"
