commit pdf button done github pages on way

--- a/HTML/CSS_Files/index.html
+++ b/HTML/CSS_Files/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="" alt="" width="45" height="40">
+                    <img src="../../Bilder/pic2nav.png" alt="" width="45" height="40">
                   </a>
                   <button
                     class="navbar-toggler"
@@ -72,8 +72,8 @@
 <div class="description">
 <div class="row">
 <div class="col-lg-2"></div>
-<div class="col-lg-8"><p><strong>Welcome to my easy cookie Site
-    Need Guidance on how to bake easy cookies? Check Navbar mate, There you will also find Guidance on how to make them and the Recipe List</strong></p></div>
+<div class="col-lg-8"><p><strong>Welcome to my easy cookie Site.
+    Need Guidance on how to bake easy cookies? Check the navbar, There you will find guidance on how to bake easy cookies and you will find the Recipe List</strong></p></div>
 <div class="col-lg-2"></div>
 </div> 
 </div>
