--- a/Recipe/Guidance/Guidance.html
+++ b/Recipe/Guidance/Guidance.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="../../HTML/CSS_Files/Navbar_Picture.jpg" alt="" width="45" height="40">
+                    <img src="../../Bilder/pic2nav.png" alt="" width="45" height="40">
                   </a>
                   <button
                     class="navbar-toggler"
@@ -95,7 +95,7 @@
       <div class="card text-white bg-dark mb-3 " style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/Step1.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/Step1.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step2.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step2.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step3.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step3.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step4.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step4.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step5.jpg" style="max-height: 20em"alt="picture of food" />
+          <img src="../../Bilder/step5.jpg" style="max-height: 18em"alt="picture of food" />
         </div>
       </div>
     </div>
@@ -201,7 +201,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/result_ofsteps1-5.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/result_ofsteps1-5.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -230,7 +230,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step6.jpg" style="max-height: 20em"alt="picture of food" />
+          <img src="../../Bilder/step6.jpg" style="max-height: 18em"alt="picture of food" />
         </div>
       </div>
     </div>
@@ -244,7 +244,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step7.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step7.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -273,7 +273,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step8.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step8.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -287,7 +287,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step9.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step9.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -330,7 +330,7 @@
       <div class="card text-white bg-dark mb-3" style="max-width: 100em">
         <div class="card-header">Picture </div>
         <div class="card-body">
-          <img src="../../Bilder/step11.jpg" style="max-height: 20em" alt="picture of food" />
+          <img src="../../Bilder/step11.jpg" style="max-height: 18em" alt="picture of food" />
         </div>
       </div>
     </div>
@@ -350,6 +350,10 @@
 
 
 <!--PDF BUTTON-->
+
+<h1>PDF Recipe List</h1>
+    <p>Open a PDF file <a href="../../Bilder/Recipe List.pdf"> Recipe List</a>.</p>
+
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
