--- a/About_me/aboutme.html
+++ b/About_me/aboutme.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="../../HTML/CSS_Files/Navbar_Picture.jpg" alt="" width="45" height="25">
+                    <img src="../Bilder/pic2nav.png" alt="" width="45" height="25">
                   </a>
                   <button
                     class="navbar-toggler"
