--- a/About_me/aboutme.html
+++ b/About_me/aboutme.html
@@ -33,10 +33,10 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" style="color: white;" href="../Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
+                        <a class="nav-link active" aria-current="page" style="color: white;" href="./Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" style="color: white;" href="../../HTML/CSS_Files/index.html">Home Page</a>
+                          <a class="nav-link active" aria-current="page" style="color: white;" href="./HTML/CSS_Files/index.html">Home Page</a>
                         </li>
                     </ul>
                   </div>
@@ -66,7 +66,7 @@
      Aryan's Cookie
     </h3>
     <p>
-    A very passionate dude(totally not lying), created this marvellous cookie. He then went on to open his first Company, being inspired by Lightning Mcqueen!
+    A very passionate dude(totally not lying), created this marvelous cookie. He then went on to open his first Company, being inspired by Lightning Mcqueen!
     </p>
     <p>He only became passionate about cookies, because one night while he was playing on his I_smurf_your_peek account, he was jump scared by the cookie monster!</p>
   </div>
