--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #8A5A44;">
         <div class="container-fluid">
                   <a class="navbar-brand" href="#home">
-                    <img src="../../Bilder/pic2nav.png" alt="" width="45" height="40">
+                    <img src="./Bilder/pic2nav.png" alt="" width="45" height="40">
                   </a>
                   <button
                     class="navbar-toggler"
@@ -33,9 +33,9 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" style="color: white;" href="../../About_me/aboutme.html">About me</a>
+                        <a class="nav-link active" aria-current="page" style="color: white;" href="./About_me/aboutme.html">About me</a>
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" style="color: white;" href="../../Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
+                          <a class="nav-link active" aria-current="page" style="color: white;" href="./Recipe/Guidance/Guidance.html">Recipe List/Guidance</a>
                         </li>
                     </ul>
                   </div>
@@ -96,7 +96,7 @@
      Aryan's Cookie
     </h6>
     <p>
-    A very passionate dude(totally not lying), created this marvellous cookie. He then went on to open his first Company, being inspired by Lightning Mcqueen!
+    A very passionate dude(totally not lying), created this marvelous cookie. He then went on to open his first Company, being inspired by Lightning Mcqueen!
     </p>
   </div>
   <!-- Grid column -->
