--- a/About_me/aboutme.html
+++ b/About_me/aboutme.html
@@ -49,7 +49,7 @@
       <!-- Grid column -->
       <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
         <!-- Content -->
-        <h3 class="fw-bold mb-4">
+        <h3 class="fw-bold mb-4" style=" margin-top: 2em;">
          Aryan's Cookie
         </h3>
         <p>
@@ -63,7 +63,7 @@
       <!-- Grid column -->
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
         <!-- Links -->
-        <h5 class="text fw-bold mb-4">
+        <h5 class="text fw-bold mb-4" style=" margin-top: 3em;">
             <i class="fas fa-gem me-3"></i>Contact
         </h5>
         <p><i class="fas fa-home me-3"></i> Wil, ZH 8196, CH</p>
